# util-template

./: Cargo.toml  LICENSE  README.md
mit-apache/: Cargo.toml  README.md
mit-apache/.cargo/: config.toml
mit-apache/util/: Cargo.toml
mit-apache/util/src/: lib.rs  main.rs
mit-apache/{{project-name}}/tests/: test.rs
no-license/{{project-name}}/: Cargo.toml
{{project-name}}/: Cargo.toml
{{project-name}}/examples/: example.rs
