[package]
name = "{{project-name}}"
version = "0.1.0"
edition = "2018"
description = "A brief description"
readme = "../README.md"
repository = "https://github.com/{{gituser}}/{{project-name}}"
homepage = "https://github.com/{{gituser}}/{{project-name}}"
license = "MIT OR Apache-2.0"
keywords = []
categories = []

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
util = { path = "../util" }
